--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Bimby Dose Helper</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Raleway');
+
+      * {
+        font-family: Raleway;
+      }
+    </style>
   </head>
   <body>
     <noscript>
