--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,15 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129164328-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-129164328-1');
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
